--- a/app/src/main/res/values-de/strings_alerts.xml
+++ b/app/src/main/res/values-de/strings_alerts.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="alert_pro_feature_title">PRO-Version Funktion</string>
-    <string name="alert_pro_feature_streaming_msg">Dies ist die kostenlose Version von Printoid.\nVideostreaming ist nur in der PRO-Version verfügbar - lade sie direkt im Google Play Store!</string>
-    <string name="alert_pro_feature_plugins_msg">Dies ist die kostenlose Version von Printoid.\nOctoPrint Plugins ist nur in der PRO-Version verfügbar - lade sie direkt im Google Play Store!</string>
-    <string name="alert_pro_feature_screensaver_msg">Dies ist die kostenlose Version von Printoid.\nBildschirmschoner ist nur in der PRO-Version verfügbar - lade sie direkt im Google Play Store!</string>
-    <string name="alert_pro_feature_command_msg">Dies ist die kostenlose Version von Printoid.\nDie benutzerdefinierten SSH- und GCODE-Befehle sind nur in der PRO-Version verfügbar - lade sie direkt im Google Play Store!</string>
-    <string name="alert_pro_feature_octoprint_web_interface_msg">Dies ist die kostenlose Version von Printoid.\nDer Zugriff auf deine OctoPrint Weboberfläche ist nur in der PRO-Version verfügbar - lade sie direkt im Google Play Store!</string>
-    <string name="alert_pro_feature_multi_profile_msg">Dies ist die kostenlose Version von Printoid.\nDas Hinzufügen von mehr als einem Drucker-Profil ist nur in der PRO-Version verfügbar - lade sie direkt im Google Play Store!</string>
-    <string name="alert_pro_feature_render_msg">Dies ist die kostenlose Version von Printoid.\nDer GCODE- &amp; STL 3D-Visualisierer ist nur in der PRO-Version verfügbar - lade sie direkt im Google Play Store!</string>
-    <string name="alert_pro_feature_layers_msg">Dies ist die kostenlose Version von Printoid.\nDer GCODE 2D-Schichten Visualisierer ist nur in der PRO-Version verfügbar - lade sie direkt im Google Play Store!</string>
-    <string name="alert_pro_feature_realtime_layers_msg">Dies ist die kostenlose Version von Printoid.\nDer Echtzeit Schicht-für-Schicht Visualisierer ist nur in der PRO-Version verfügbar - lade sie direkt im Google Play Store!</string>
-    <string name="alert_pro_feature_spools_manager_msg">Dies ist die kostenlose Version von Printoid.\nDas Filament-Spool-Manager-Modul ist in der PRO-Version verfügbar, laden Sie es jetzt bei Google Play herunter!</string>
+    <string name="alert_pro_feature_title">PREMIUM-Version Funktion</string>
+    <string name="alert_pro_feature_streaming_msg">Dies ist die kostenlose Version von Printoid.\nVideostreaming ist nur in der PREMIUM-Version verfügbar - lade sie direkt im Google Play Store!</string>
+    <string name="alert_pro_feature_plugins_msg">Dies ist die kostenlose Version von Printoid.\nOctoPrint Plugins ist nur in der PREMIUM-Version verfügbar - lade sie direkt im Google Play Store!</string>
+    <string name="alert_pro_feature_screensaver_msg">Dies ist die kostenlose Version von Printoid.\nBildschirmschoner ist nur in der PREMIUM-Version verfügbar - lade sie direkt im Google Play Store!</string>
+    <string name="alert_pro_feature_command_msg">Dies ist die kostenlose Version von Printoid.\nDie benutzerdefinierten SSH- und GCODE-Befehle sind nur in der PREMIUM-Version verfügbar - lade sie direkt im Google Play Store!</string>
+    <string name="alert_pro_feature_octoprint_web_interface_msg">Dies ist die kostenlose Version von Printoid.\nDer Zugriff auf deine OctoPrint Weboberfläche ist nur in der PREMIUM-Version verfügbar - lade sie direkt im Google Play Store!</string>
+    <string name="alert_pro_feature_multi_profile_msg">Dies ist die kostenlose Version von Printoid.\nDas Hinzufügen von mehr als einem Drucker-Profil ist nur in der PREMIUM-Version verfügbar - lade sie direkt im Google Play Store!</string>
+    <string name="alert_pro_feature_render_msg">Dies ist die kostenlose Version von Printoid.\nDer GCODE- &amp; STL 3D-Visualisierer ist nur in der PREMIUM-Version verfügbar - lade sie direkt im Google Play Store!</string>
+    <string name="alert_pro_feature_layers_msg">Dies ist die kostenlose Version von Printoid.\nDer GCODE 2D-Schichten Visualisierer ist nur in der PREMIUM-Version verfügbar - lade sie direkt im Google Play Store!</string>
+    <string name="alert_pro_feature_realtime_layers_msg">Dies ist die kostenlose Version von Printoid.\nDer Echtzeit Schicht-für-Schicht Visualisierer ist nur in der PREMIUM-Version verfügbar - lade sie direkt im Google Play Store!</string>
+    <string name="alert_pro_feature_spools_manager_msg">Dies ist die kostenlose Version von Printoid.\nDas Filament-Spool-Manager-Modul ist in der PREMIUM-Version verfügbar, laden Sie es jetzt bei Google Play herunter!</string>
 
     <string name="alert_cancel_print_title">Aktuellen Druck abbrechen</string>
     <string name="alert_cancel_print_msg">Bist du sicher, dass der Druck abgebrochen werden soll?\nEin abgebrochener Druck kann nicht wiederhergestellt werden. Somit ist der bisherige Fortschritt verloren.</string>
