--- a/app/src/main/res/values-fr/strings_alerts.xml
+++ b/app/src/main/res/values-fr/strings_alerts.xml
@@ -22,17 +22,17 @@
     <string name="alert_restart_print_title">Redémarrer l\'impression</string>
     <string name="alert_restart_print_msg">L\'impression en cours va être redémarré de zéro, êtes-vous sûr de vouloir continuer ?\nL\'impression actuelle ne pourra pas être reprise, tout travail en cours sera perdu.</string>
 
-    <string name="alert_pro_feature_title">Fonctionnalité de la version Pro</string>
-    <string name="alert_pro_feature_streaming_msg">Vous disposez de la version gratuite de Printoid. Le streaming vidéo est disponible dans la version PRO, téléchargez-la sur Google Play !</string>
-    <string name="alert_pro_feature_plugins_msg">Vous disposez de la version gratuite de Printoid. Les plugins OctoPrint sont disponibles dans la version PRO, téléchargez-la sur Google Play !</string>
-    <string name="alert_pro_feature_screensaver_msg">Vous disposez de la version gratuite de Printoid. Le mode économiseur d\'écran est disponible dans la version PRO, téléchargez-la sur Google Play !</string>
-    <string name="alert_pro_feature_command_msg">Vous disposez de la version gratuite de Printoid. Les commandes SSH et GCODE personnalisées sont disponibles dans la version PRO, téléchargez-la sur Google Play !</string>
-    <string name="alert_pro_feature_octoprint_web_interface_msg">Vous disposez de la version gratuite de Printoid. L\'accès à l\'interface web d\'OctoPrint est disponible dans la version PRO, téléchargez-la sur Google Play !</string>
-    <string name="alert_pro_feature_multi_profile_msg">Vous disposez de la version gratuite de Printoid. L\'ajout de plusieurs profils OctoPrint est disponible dans la version PRO, téléchargez-la sur Google Play !</string>
-    <string name="alert_pro_feature_render_msg">Vous disposez de la version gratuite de Printoid. Le visualiseur 3D de GCODE &amp; STL est disponible dans la version PRO, téléchargez-la sur Google Play !</string>
-    <string name="alert_pro_feature_layers_msg">Vous disposez de la version gratuite de Printoid. Le visualiseur 2D de GCODE est disponible dans la version PRO, téléchargez-la sur Google Play !</string>
-    <string name="alert_pro_feature_realtime_layers_msg">Vous disposez de la version gratuite de Printoid. Le visualiseur couche par couche en temps réel est disponible dans la version PRO, téléchargez-la sur Google Play !</string>
-    <string name="alert_pro_feature_spools_manager_msg">Vous disposez de la version gratuite de Printoid. Le manager de filament est disponible dans la version PRO, téléchargez-la sur Google Play !</string>
+    <string name="alert_pro_feature_title">Fonctionnalité de la version PREMIUM</string>
+    <string name="alert_pro_feature_streaming_msg">Vous disposez de la version gratuite de Printoid. Le streaming vidéo est disponible dans la version PREMIUM, téléchargez-la sur Google Play !</string>
+    <string name="alert_pro_feature_plugins_msg">Vous disposez de la version gratuite de Printoid. Les plugins OctoPrint sont disponibles dans la version PREMIUM, téléchargez-la sur Google Play !</string>
+    <string name="alert_pro_feature_screensaver_msg">Vous disposez de la version gratuite de Printoid. Le mode économiseur d\'écran est disponible dans la version PREMIUM, téléchargez-la sur Google Play !</string>
+    <string name="alert_pro_feature_command_msg">Vous disposez de la version gratuite de Printoid. Les commandes SSH et GCODE personnalisées sont disponibles dans la version PREMIUM, téléchargez-la sur Google Play !</string>
+    <string name="alert_pro_feature_octoprint_web_interface_msg">Vous disposez de la version gratuite de Printoid. L\'accès à l\'interface web d\'OctoPrint est disponible dans la version PREMIUM, téléchargez-la sur Google Play !</string>
+    <string name="alert_pro_feature_multi_profile_msg">Vous disposez de la version gratuite de Printoid. L\'ajout de plusieurs profils OctoPrint est disponible dans la version PREMIUM, téléchargez-la sur Google Play !</string>
+    <string name="alert_pro_feature_render_msg">Vous disposez de la version gratuite de Printoid. Le visualiseur 3D de GCODE &amp; STL est disponible dans la version PREMIUM, téléchargez-la sur Google Play !</string>
+    <string name="alert_pro_feature_layers_msg">Vous disposez de la version gratuite de Printoid. Le visualiseur 2D de GCODE est disponible dans la version PREMIUM, téléchargez-la sur Google Play !</string>
+    <string name="alert_pro_feature_realtime_layers_msg">Vous disposez de la version gratuite de Printoid. Le visualiseur couche par couche en temps réel est disponible dans la version PREMIUM, téléchargez-la sur Google Play !</string>
+    <string name="alert_pro_feature_spools_manager_msg">Vous disposez de la version gratuite de Printoid. Le manager de filament est disponible dans la version PREMIUM, téléchargez-la sur Google Play !</string>
 
     <string name="alert_delete_printer_profile_title">Supprimer le profil</string>
     <string name="alert_delete_printer_profile_message">Ce profil OctoPrint va être supprimé, êtes-vous sûr de vouloir continuer ?\nCette opération ne pourra pas être annulée.</string>
