--- a/app/src/main/res/values/strings_alerts.xml
+++ b/app/src/main/res/values/strings_alerts.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="alert_pro_feature_title">Pro version feature</string>
-    <string name="alert_pro_feature_streaming_msg">This is the free version of Printoid. The video streaming is available in the PRO version, download it now on Google Play!</string>
-    <string name="alert_pro_feature_plugins_msg">This is the free version of Printoid. The OctoPrint\'s plugins are available in the PRO version, download it now on Google Play!</string>
-    <string name="alert_pro_feature_screensaver_msg">This is the free version of Printoid. The screen saver mode is available in the PRO version, download it now on Google Play!</string>
-    <string name="alert_pro_feature_command_msg">This is the free version of Printoid. The custom SSH and GCODE commands are available in the PRO version, download it now on Google Play!</string>
-    <string name="alert_pro_feature_octoprint_web_interface_msg">This is the free version of Printoid. The access to your OctoPrint web interface are available in the PRO version, download it now on Google Play!</string>
-    <string name="alert_pro_feature_multi_profile_msg">This is the free version of Printoid.\nThe add of more than one printer profile is available in the PRO version, download it now on Google Play!</string>
-    <string name="alert_pro_feature_render_msg">This is the free version of Printoid.\nThe GCODE &amp; STL 3D visualizer is available in the PRO version, download it now on Google Play!</string>
-    <string name="alert_pro_feature_layers_msg">This is the free version of Printoid.\nThe GCODE 2D layers visualizer is available in the PRO version, download it now on Google Play!</string>
-    <string name="alert_pro_feature_realtime_layers_msg">This is the free version of Printoid.\nThe real time layer per layer visualizer is available in the PRO version, download it now on Google Play!</string>
-    <string name="alert_pro_feature_spools_manager_msg">This is the free version of Printoid.\nThe filament spool manager module is available in the PRO version, download it now on Google Play!</string>
+    <string name="alert_pro_feature_title">PREMIUM version feature</string>
+    <string name="alert_pro_feature_streaming_msg">This is the free version of Printoid. The video streaming is available in the PREMIUM version, download it now on Google Play!</string>
+    <string name="alert_pro_feature_plugins_msg">This is the free version of Printoid. The OctoPrint\'s plugins are available in the PREMIUM version, download it now on Google Play!</string>
+    <string name="alert_pro_feature_screensaver_msg">This is the free version of Printoid. The screen saver mode is available in the PREMIUM version, download it now on Google Play!</string>
+    <string name="alert_pro_feature_command_msg">This is the free version of Printoid. The custom SSH and GCODE commands are available in the PREMIUM version, download it now on Google Play!</string>
+    <string name="alert_pro_feature_octoprint_web_interface_msg">This is the free version of Printoid. The access to your OctoPrint web interface are available in the PREMIUM version, download it now on Google Play!</string>
+    <string name="alert_pro_feature_multi_profile_msg">This is the free version of Printoid.\nThe add of more than one printer profile is available in the PREMIUM version, download it now on Google Play!</string>
+    <string name="alert_pro_feature_render_msg">This is the free version of Printoid.\nThe GCODE &amp; STL 3D visualizer is available in the PREMIUM version, download it now on Google Play!</string>
+    <string name="alert_pro_feature_layers_msg">This is the free version of Printoid.\nThe GCODE 2D layers visualizer is available in the PREMIUM version, download it now on Google Play!</string>
+    <string name="alert_pro_feature_realtime_layers_msg">This is the free version of Printoid.\nThe real time layer per layer visualizer is available in the PREMIUM version, download it now on Google Play!</string>
+    <string name="alert_pro_feature_spools_manager_msg">This is the free version of Printoid.\nThe filament spool manager module is available in the PREMIUM version, download it now on Google Play!</string>
 
     <string name="alert_cancel_print_title">Abort current print</string>
     <string name="alert_cancel_print_msg">This printing job will be canceled, do you want to continue?\nA canceled print could not be reloaded to its previous state, so your actual work will be lost.</string>
