--- a/app/src/main/res/values-it/strings_menu.xml
+++ b/app/src/main/res/values-it/strings_menu.xml
@@ -36,7 +36,7 @@
     <string name="menu_profile_settings">Parametri del server</string>
 
     <string name="menu_lite_label_promote">Ti piace Printoid Lite?</string>
-    <string name="menu_lite_text_promote">Supporta lo sviluppatore e goditi la versione completa PRO o PREMIUM!</string>
+    <string name="menu_lite_text_promote">Supporta lo sviluppatore e goditi la versione completa PREMIUM!</string>
 
     <string name="menu_profiles_create">Inserisci profili</string>
     <string name="menu_profiles_edit">Gestisci profili</string>
