--- a/app/src/main/res/values-de/strings_menu.xml
+++ b/app/src/main/res/values-de/strings_menu.xml
@@ -36,7 +36,7 @@
     <string name="menu_profile_settings">Serverparameter</string>
 
     <string name="menu_lite_label_promote">Magst du Printoid Lite?</string>
-    <string name="menu_lite_text_promote">Entfernen Sie Anzeigen und genießen Sie PRO und PREMIUM mit allen Funktionen!</string>
+    <string name="menu_lite_text_promote">Entfernen Sie Anzeigen und genießen Sie PREMIUM mit allen Funktionen!</string>
 
     <string name="menu_profiles_create">Profil hinzufügen</string>
     <string name="menu_profiles_edit">Profil bearbeiten</string>
