--- a/app/src/main/res/values-fr/strings_menu.xml
+++ b/app/src/main/res/values-fr/strings_menu.xml
@@ -36,7 +36,7 @@
     <string name="menu_profile_settings">Paramètres du serveur</string>
 
     <string name="menu_lite_label_promote">Vous aimez Printoid Lite?</string>
-    <string name="menu_lite_text_promote">Supportez le développeur et profitez de la version complète PRO ou PREMIUM !</string>
+    <string name="menu_lite_text_promote">Supportez le développeur et profitez de la version complète PREMIUM !</string>
 
     <string name="menu_profiles_create">Ajouter un profil</string>
     <string name="menu_profiles_edit">Gérer les profils</string>
