--- a/app/src/main/res/values-pt/strings_menu.xml
+++ b/app/src/main/res/values-pt/strings_menu.xml
@@ -42,7 +42,7 @@
     <string name="menu_profile_settings">Parâmetros do servidor</string>
 
     <string name="menu_lite_label_promote">Você gostou do Printoid Lite?</string>
-    <string name="menu_lite_text_promote">Apoie o desenvolvedor e aproveite a versão PRO ou a mais completa PREMIUM!</string>
+    <string name="menu_lite_text_promote">Apoie o desenvolvedor e aproveite a versão a mais completa PREMIUM!</string>
 
     <string name="menu_profiles_create">Adicionar perfil</string>
     <string name="menu_profiles_edit">Gerenciar perfis</string>
