--- a/app/src/main/res/values-ru/strings_menu.xml
+++ b/app/src/main/res/values-ru/strings_menu.xml
@@ -36,7 +36,7 @@
     <string name="menu_profile_settings">Параметры сервера</string>
 
     <string name="menu_lite_label_promote">Вам нравится Printoid Lite?</string>
-    <string name="menu_lite_text_promote">Удалите рекламу и наслаждайтесь полнофункциональной версией PRO и PREMIUM!</string>
+    <string name="menu_lite_text_promote">Удалите рекламу и наслаждайтесь полнофункциональной версией PREMIUM!</string>
 
     <string name="menu_profiles_create">Добавить профиль
 </string>
