--- a/app/src/main/res/values/strings_menu.xml
+++ b/app/src/main/res/values/strings_menu.xml
@@ -43,7 +43,7 @@
     <string name="menu_debug" translatable="false">Printoid Debug Bridge</string>
 
     <string name="menu_lite_label_promote">Do you like Printoid Lite?</string>
-    <string name="menu_lite_text_promote">Support the developer and enjoy the PRO or PREMIUM full-featured version!</string>
+    <string name="menu_lite_text_promote">Support the developer and enjoy the PREMIUM full-featured version!</string>
 
     <string name="menu_profiles_create">Add profile</string>
     <string name="menu_profiles_edit">Manage profiles</string>
