--- a/app/src/main/res/values-fr/strings_menu.xml
+++ b/app/src/main/res/values-fr/strings_menu.xml
@@ -24,7 +24,7 @@
     <string name="menu_full_screen_more_tools">Étendre les outils</string>
     <string name="menu_minimize">Réduire</string>
     <string name="menu_spools">Gestion de bobines</string>
-    <string name="menu_printoid_web">Site web de Printoid</string>
+    <string name="menu_printoid_web">Site web de 3DQuality</string>
     <string name="menu_files">Fichiers</string>
     <string name="menu_timelapse">Timelapses</string>
     <string name="menu_alarms">Manager d\'alertes</string>
