--- a/app/src/main/res/values-nl/strings_menu.xml
+++ b/app/src/main/res/values-nl/strings_menu.xml
@@ -23,7 +23,7 @@
     <string name="menu_full_screen_slicer">Inzoomen de slicer</string>
     <string name="menu_full_screen_more_tools">Inzoomen tools</string>
     <string name="menu_minimize">Minimaliseer</string>
-    <string name="menu_printoid_web">Website Printoid</string>
+    <string name="menu_printoid_web">Website 3DQuality</string>
     <string name="menu_files">Bestanden</string>
     <string name="menu_spools">Spools</string>
     <string name="menu_timelapse">Filmpjes</string>
