--- a/app/src/main/res/values-it/strings_menu.xml
+++ b/app/src/main/res/values-it/strings_menu.xml
@@ -27,7 +27,7 @@
     <string name="menu_app_infos">Aiuto</string>
     <string name="menu_octoprint_web">OctoPrint interfaccia-web</string>
     <string name="menu_files">File</string>
-    <string name="menu_printoid_web">Printoid website</string>
+    <string name="menu_printoid_web">3DQuality website</string>
     <string name="menu_timelapse">Timelapse</string>
     <string name="menu_contact_developer">Contatta sviluppatore</string>
     <string name="menu_tos">Termini di servizio</string>
