--- a/app/src/main/res/values-pt/strings_menu.xml
+++ b/app/src/main/res/values-pt/strings_menu.xml
@@ -27,7 +27,9 @@
     <string name="menu_app_infos">Ajuda</string>
     <string name="menu_octoprint_web">Interface web do OctoPrint</string>
     <string name="menu_files">Arquivos</string>
-    <string name="menu_printoid_web">Website do Printoid</string>
+    <string name="menu_cults" translatable="false">Cults</string>
+    <string name="menu_myminifactory" translatable="false">MyMiniFactory</string>
+    <string name="menu_printoid_web">Website do 3DQuality</string>
     <string name="menu_timelapse">Timelapses</string>
     <string name="menu_contact_developer">Contate o desenvolvedor</string>
     <string name="menu_tos">Termos de serviço</string>
