--- a/app/src/main/res/values-ru/strings_menu.xml
+++ b/app/src/main/res/values-ru/strings_menu.xml
@@ -25,7 +25,7 @@
     <string name="menu_octoprint_web">Web интерфейс OctoPrint</string>
     <string name="menu_files">Файлы</string>
     <string name="menu_spools">Kатушки</string>
-    <string name="menu_printoid_web">Сайт Printoid</string>
+    <string name="menu_printoid_web">Сайт 3DQuality</string>
     <string name="menu_timelapse">Видеоролики</string>
     <string name="menu_alarms">Оповещения</string>
     <string name="menu_contact_developer">Вопрос автору</string>
