--- a/app/src/main/res/values/strings_menu.xml
+++ b/app/src/main/res/values/strings_menu.xml
@@ -36,7 +36,7 @@
     <string name="menu_files">Files</string>
     <string name="menu_cults" translatable="false">Cults</string>
     <string name="menu_myminifactory" translatable="false">MyMiniFactory</string>
-    <string name="menu_printoid_web">Printoid website</string>
+    <string name="menu_printoid_web">3DQuality website</string>
     <string name="menu_timelapse">Timelapses</string>
     <string name="menu_contact_developer">Contact the developer</string>
     <string name="menu_tos">Terms of service</string>
