--- a/app/src/main/res/values-de/strings_sort.xml
+++ b/app/src/main/res/values-de/strings_sort.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="sort_method">Wähle Sortierung:</string>
-    <string name="sort_name_ascending">Alphabetisch</string>
-    <string name="sort_name_descending">Alphabetisch (umgekehrt)</string>
-    <string name="sort_oldest_first">Älteste Datei zuerst</string>
-    <string name="sort_newest_first">Neuste Datei zuerst</string>
-    <string name="sort_shortest_first">Schnellster Druck zuerst</string>
-    <string name="sort_longest_first">Längster Druck zuerst</string>
-    <string name="sort_most_success_first">Erfolgreichste Datei zuerst</string>
-    <string name="sort_less_success_first">Erfolgloseste Datei zuerst</string>
-    <string name="sort_favorites_only">Nur Favoriten</string>
+    <string name="sort_method">Dateien sortieren nach:</string>
+    <string name="sort_name_ascending">Name (A - Z)</string>
+    <string name="sort_name_descending">Name (Z - A)</string>
+    <string name="sort_oldest_first">Datum (älteste zuerst)</string>
+    <string name="sort_newest_first">Datum (neueste zuerst)</string>
+    <string name="sort_shortest_first">Dauer (kürzeste zuerst)</string>
+    <string name="sort_longest_first">Dauer (längste zuerst)</string>
+    <string name="sort_most_success_first">Erfolg (die meisten zuerst)</string>
+    <string name="sort_less_success_first">Erfolg (weniger zuerst)</string>
+    <string name="sort_favorites_only">Nur Favoriten anzeigen</string>
 
 </resources>
