--- a/app/src/main/res/values-es/strings_sort.xml
+++ b/app/src/main/res/values-es/strings_sort.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="sort_method">Seleccione método de ordenación:</string>
-    <string name="sort_name_ascending">Alfabético</string>
-    <string name="sort_name_descending">Alfabético inverso</string>
-    <string name="sort_oldest_first">Más antiguos primero</string>
-    <string name="sort_newest_first">Más nuevos primero</string>
-    <string name="sort_shortest_first">Más cortos primero</string>
-    <string name="sort_longest_first">Más largos primero</string>
-    <string name="sort_most_success_first">Más utilizado primero</string>
-    <string name="sort_less_success_first">Menos utilizado primero</string>
-    <string name="sort_favorites_only">Solo favoritos</string>
+    <string name="sort_method">Ordenar archivos por:</string>
+    <string name="sort_name_ascending">Nombre (A - Z)</string>
+    <string name="sort_name_descending">Nombre (Z - A)</string>
+    <string name="sort_oldest_first">Fetcha (más antiguos primero)</string>
+    <string name="sort_newest_first">Fetcha (más nuevo primero)</string>
+    <string name="sort_shortest_first">Duración (más corto primero)</string>
+    <string name="sort_longest_first">Duración (más largo primero)</string>
+    <string name="sort_most_success_first">Éxito (mayoría primero)</string>
+    <string name="sort_less_success_first">Éxito (menos primero)</string>
+    <string name="sort_favorites_only">Mostrar solo favoritos</string>
 
 </resources>
