--- a/app/src/main/res/values-fr/strings_sort.xml
+++ b/app/src/main/res/values-fr/strings_sort.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="sort_method">Sélectionnez un mode de tri :</string>
-    <string name="sort_name_ascending">Alphabétique</string>
-    <string name="sort_name_descending">Alphabétique inversé</string>
-    <string name="sort_oldest_first">Plus ancien</string>
-    <string name="sort_newest_first">Plus récent</string>
-    <string name="sort_shortest_first">Plus courte impression</string>
-    <string name="sort_longest_first">Plus longue impression</string>
-    <string name="sort_most_success_first">Plus de réussite</string>
-    <string name="sort_less_success_first">Moins de réussite</string>
-    <string name="sort_favorites_only">Favoris uniquement</string>
+    <string name="sort_method">Trier les fichiers par :</string>
+    <string name="sort_name_ascending">Nom (A - Z)</string>
+    <string name="sort_name_descending">Nom (Z - A)</string>
+    <string name="sort_oldest_first">Date (plus vieux d\'abord)</string>
+    <string name="sort_newest_first">Date (plus récent d\'abord)</string>
+    <string name="sort_shortest_first">Durée (plus court d\'abord)</string>
+    <string name="sort_longest_first">Durée (plus long d\'abord)</string>
+    <string name="sort_most_success_first">Succès (le + d\'abord)</string>
+    <string name="sort_less_success_first">Succès (le - d\'abord)</string>
+    <string name="sort_favorites_only">Uniquement les favoris</string>
     
 </resources>
