--- a/app/src/main/res/values-ru/strings_sort.xml
+++ b/app/src/main/res/values-ru/strings_sort.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="sort_method">Сортировать по:</string>
+    <string name="sort_method">Сортировать файлы по:</string>
     <string name="sort_name_ascending">А-Я</string>
     <string name="sort_name_descending">Я-А</string>
     <string name="sort_oldest_first">Сначала старые файлы</string>
